# byte-writer

./: .gitignore  CMakeLists.txt  README.md
inspiration/: Makefile  README.md  kilo.c
src/: main.cpp
src/editor/: Editor.cpp  Editor.h  FileIO.cpp  FileIO.h  Row.cpp  Row.h  Syntax.cpp  Syntax.h
src/terminal/: Terminal.cpp  Terminal.h
src/utils/: Buffer.cpp  Buffer.h  Helpers.cpp  Helpers.h
